--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
     <head>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-            <link rel="stylesheet" href="stylesheet.css">
-            <meta charset="utf-8">
-            <title>【初心者必見！】自作PCの作り方を1から教えます！ by palette!</title>
+        <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" href="responsive.css">
+        <title>【初心者必見！】自作PCの作り方を1から教えます！ by palette!</title>
     </head>
     <body>
         <header>
@@ -55,3 +56,5 @@
 
     </footer>
 </html>
+
+
