--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -20,41 +21,196 @@
                     <div class ="category">
                         <a href="https://s-hme.github.io/Palette/">TOP</a>
                         <span> ＞ </span>
-                        <a href="#">【自作PC】</a>
+                        <a href="https://s-hme.github.io/How-to-make-PC-main/">【自作PC】</a>
+                        <span> ＞ </span>
+                        <a href="#">パーツ紹介</a>
                     </div>
                     <div class = "title-wrapper">
-                        <h2 class = "title-name">初心者必見！！自作パソコンのすすめ！</h2>
-                        <p>>自分でパソコンを組んでみたい。。でも何を買えばいいのか分からない。。</p>
-                        <p>そんなあなたのために、実際に購入、組み立てを通して</p>
-                        <p>分かりやすく3部構成に分けて解説していきます！</p>
+                        <h2 class = "title-name"><第1回>パーツ紹介</h2>
+                        <p>>今回は第1回として、PC制作に必要なパーツについて紹介していきます。</p>
+                        <p></p>
+                        <p></p>
                     </div>
                 </div>
             </div>
 
             <div class = "contents-wrapper">
-                <div class = "part">
-                    <a href="https://s-hme.github.io/How-to-make-PC-parts/"><h3><第1回>パーツ紹介</h3></a>
-                    <a href=""><h3><第2回>パーツ選び</h3></a>
-                    <a href=""><h3><第3回>実際に組んでみる！</h3></a>
+                
+                <div class = "contents-title">
+                    <h1>目次</h1>
                 </div>
 
-                <div class = "img">
-                    <img class = "img1" src="717271_l.jpg" >
+                <div class = "contents">
+                    <ul>
+                        <li>1.マザーボード</li>
+                        <li>2.CPU</li>
+                        <li>3.メモリ</li>
+                        <li>4.ストレージ</li>
+                        <li>5.PCケース</li>
+                        <li>6.グラフィックボード</li>
+                        <li>7.電源ユニット</li>
+                        <li>8.CPUクーラー</li>
+                    </ul>
                 </div>
+
             </div>
 
+            <div class = "main-article">
+                <div class = "topic a">
+                    <div class = "tHead">
+                        <p>1.マザーボード</p>
+                    </div>
+                    <div class = "exp">
+                        <div class = "role">
+                            <p>～役割～</p>
+                            <p>CPU、メモリ、ストレージ、グラフィックボードを設置する場所になります。</p>
+                            <p>また、各パーツに異常があれば知らせてくれます。</p>
+                        </div>
+                        <p class = "caution">※マザーボードとCPUは相互に対応している必要があります。</p>
 
 
 
+
+                    </div>
+                </div>
+
+                <div class = "topic b">
+                    <div class = "tHead">
+                        <p>2.CPU</p>
+                    </div>
+                    <div class = "exp">
+                        <div class = "role">
+                            <p>～役割～</p>
+                            <p>PCの頭脳に当たるパーツで、計算や処理を行ないます。</p>
+                            <p>発熱するため、CPUクーラーが必要になります。</p>
+                        </div>
+                        <p class = "caution">※CPUとマザーボードは相互に対応している必要があります。</p>
+
+
+
+
+                    </div>
+                </div>
+
+                <div class = "topic c">
+                    <div class = "tHead">
+                        <p>3.メモリ</p>
+                    </div>
+                    <div class = "exp">
+                        <div class = "role">
+                            <p>～役割～</p>
+                            <p>CPUの補助役。</p>
+                            <p>CPUが使うデータを一時的に保存してくれます。</p>
+                        </div>
+
+
+
+
+                    </div>
+                </div>
+
+                <div class = "topic d">
+                    <div class = "tHead">
+                        <p>4.ストレージ</p>
+                    </div>
+                    <div class = "exp">
+                        <div class = "role">
+                            <p>～役割～</p>
+                            <p>データを記録し保存するためのパーツです。</p>
+                            <p>容量が大きいほど、多くのデータを保存できます。</p>
+                        </div>
+
+
+
+                    </div>
+                </div>
+
+                <div class = "topic e">
+                    <div class = "tHead">
+                        <p>5.PCケース</p>
+                    </div>
+                    <div class = "exp">
+                        <div class = "role">
+                            <p>～役割～</p>
+                            <p>各パーツを入れるための箱。</p>
+                            <p>デザインが豊富で、見た目を左右する。</p>
+                        </div>
+
+
+
+
+                    </div>
+                </div>
+
+                <div class = "topic f">
+                    <div class = "tHead">
+                        <p>6.グラフィックボード</p>
+                    </div>
+                    <div class = "exp">
+                        <div class = "role">
+                            <p>～役割～</p>
+                            <p>映像を描画する専用のパーツ。</p>
+                            <p></p>
+                        </div>
+                        <p class = "caution">※マザーボードのサイズに合わせて選ぶ必要があります。</p>
+
+
+                    </div>
+                </div>
+
+                <div class = "topic f">
+                    <div class = "tHead">
+                        <p>7.電源ユニット</p>
+                    </div>
+                    <div class = "exp">
+                        <div class = "role">
+                            <p>～役割～</p>
+                            <p>全てのパーツに電力を供給するパーツ。</p>
+                            <p></p>
+                        </div>
+
+
+
+
+                    </div>
+                </div>
+
+                <div class = "topic f">
+                    <div class = "tHead">
+                        <p>8.CPUクーラー</p>
+                    </div>
+                    <div class = "exp">
+                        <div class = "role">
+                            <p>～役割～</p>
+                            <p>CPUは稼働していると熱を発するため、それを冷やすためのパーツ。</p>
+                            <p>CPUを買うと大体付属しています。</p>
+                        </div>
+
+
+
+
+                    </div>
+                </div>
+
+
+            </div>
+
+            <div class = "conclude">
+                <p> < まとめ > </p>
+
+
+            </div>
+        </div>
+        
+    <footer>
+        <div class = "footer-container">
+
+        </div>
+    </footer>
 
     </body>
-    <footer>
 
 
 
 
-
-    </footer>
 </html>
-
-
