--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
                     </div>
                     <div class = "title-wrapper">
                         <h2 class = "title-name">初心者必見！！自作パソコンのすすめ！</h2>
-                        <p>>自分でパソコンを組んでみたい。。でも何を買えばいいのか分からない。。</p>
-                        <p>そんなあなたのために、実際に購入、組み立てを通して</p>
-                        <p>分かりやすく3部構成に分けて解説していきます！</p>
+                        <div class = "title-article">
+                            <p class = "bb">>自分でパソコンを組んでみたい。。でも何を買えばいいのか分からない。。</p>
+                            <p>そんなあなたのために、実際に購入、組み立てを3部構成に分けて解説していきます！</p>
+                            <p></p>
+                        </div>
                     </div>
                 </div>
             </div>
