--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <h2 class = "title-name">初心者必見！！自作パソコンのすすめ！</h2>
                         <div class = "title-article">
                             <p class = "bb">>自分でパソコンを組んでみたい。。でも何を買えばいいのか分からない。。</p>
-                            <p>そんなあなたのために、実際に購入、組み立てを3部構成に分けて解説していきます！</p>
+                            <p class = "ma">そんなあなたのために、実際に購入、組み立てを3部構成に分けて解説していきます！</p>
                             <p></p>
                         </div>
                     </div>
@@ -44,6 +44,7 @@
                     <img class = "img1" src="717271_l.jpg" >
                 </div>
             </div>
+        </div>
 
 
 
