--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                     <div class = "title-wrapper">
                         <h2 class = "title-name">初心者必見！！自作パソコンのすすめ！</h2>
                         <div class = "title-article">
-                            <p class = "bb">>自分でパソコンを組んでみたい。。でも何を買えばいいのか分からない。。</p>
+                            <p class = "aa">>自分でパソコンを組んでみたい。。でも何を買えばいいのか分からない。。どんなパーツがあるのか知りたい。</p>
+                            <p class = "bb">>自分でパソコンを組んでみたい。。<br>でも何を買えばいいのか分からない。。<br>どんなパーツがあるのか知りたい。</p>
                             <div class = "img">
                                 <img class = "img1" src="717271_l.jpg" >
                             </div>
@@ -37,10 +38,19 @@
             </div>
 
             <div class = "contents-wrapper">
-                <div class = "part">
-                    <a href="https://s-hme.github.io/How-to-make-PC-parts/"><h3><第1回>パーツ紹介</h3></a>
-                    <a href=""><h3><第2回>パーツ選び</h3></a>
-                    <a href=""><h3><第3回>実際に組んでみる！</h3></a>
+                <div class = "allpart">
+                    <div class = "part Parts">
+                        <a href="https://s-hme.github.io/How-to-make-PC-parts/"><h3><第1回>必須パーツ紹介</h3></a>
+                        <p>↑　PC制作に必要なパーツを分かりやすくまとめたページ</p>
+                    </div>
+                    <div class = "part selectParts">
+                        <a href=""><h3><第2回>パーツ選び</h3></a>
+                        <p></p>
+                    </div>
+                    <div　class = "part makePC">    
+                        <a href=""><h3><第3回>実際に組んでみる！</h3></a>
+                        <p></p>
+                    </div>
                 </div>
 
                 <div class = "img">
