--- a/index.html
+++ b/index.html
@@ -14,25 +14,31 @@
                     
             </div>
         </header>
+
+        <div class = "top-wrapper">
+            <div class = "title">   
+                <div class ="category">
+                    <a href="https://s-hme.github.io/Palette/">TOP</a>
+                    <span> ＞ </span>
+                    <a href="#">【自作PC】</a>
+                </div>
+                <h2 class = "title-name">初心者必見！！自作パソコンのすすめ！</h2>
+            </div>
+        </div>
+
+
         <div class = "main">
-            <div class = "top-wrapper">
-                <div class = "title">   
-                    <div class ="category">
-                        <a href="https://s-hme.github.io/Palette/">TOP</a>
-                        <span> ＞ </span>
-                        <a href="#">【自作PC】</a>
+
+            <div class = "title-wrapper">
+                <div class = "title-article">
+                    <p class = "aa">>自分でパソコンを組んでみたい。。</p>
+                    <p class = "aa">>    でも何を買えばいいのか分からない。。</p>
+                    <p class = "aa">>どんなパーツがあるのか知りたい。</p>
+                    <div class = "img">
+                        <img class = "img1" src="717271_l.jpg" >
                     </div>
-                    <div class = "title-wrapper">
-                        <h2 class = "title-name">初心者必見！！自作パソコンのすすめ！</h2>
-                        <div class = "title-article">
-                            <p class = "aa">>自分でパソコンを組んでみたい。。でも何を買えばいいのか分からない。。どんなパーツがあるのか知りたい。</p>
-                            <div class = "img">
-                                <img class = "img1" src="717271_l.jpg" >
-                            </div>
-                            <p class = "ma">そんなあなたのために、実際に購入、組み立てを3部構成に分けて解説していきます！</p>
-                            <p></p>
-                        </div>
-                    </div>
+                    <p class = "ma">そんなあなたのために、実際に購入、組み立てを3部構成に分けて解説していきます！</p>
+                    <p></p>
                 </div>
             </div>
 
@@ -52,9 +58,14 @@
                     </div>
                 </div>
 
-                <div class = "img">
-                    <img class = "img2" src="717271_l.jpg" >
-                </div>
+                
+            </div>
+        </div>
+
+        <div class = "rightP">
+            <div class = "mainRP">
+                <p>やったぜ</p>
+
             </div>
         </div>
 
@@ -63,12 +74,6 @@
 
 
     </body>
-    <footer>
 
-
-
-
-
-    </footer>
 </html>
 
